# EmbeddedIntentRecognizer

./: .gitignore  CMakeLists.txt  README.md
includes/: IfIntentProvider.h  constants.h  intentprovider.h  parserfactory.h
includes/parsers/: calendarparser.h  factparser.h
src/: CMakeLists.txt  intentprovider.cpp  intentproviderfactory.cpp  main.cpp  parserfactory.cpp
src/includes/: IfIntentProvider.h  IfParser.h  constants.h  intentprovider.h  intentproviderfactory.h
src/includes/parsers/: weatherparser.h
src/parsers/: calendarparser.cpp  factparser.cpp  weatherparser.cpp
tests/: CMakeLists.txt  main.cpp
